--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -23,3 +23,19 @@
 
 .BG05
   background: linear-gradient(to right, #E8EBD7, #fff)
+
+.BG06
+  background-color: #fff
+
+.BG07
+  background-color: #6BBCB1
+
+
+.buttom.color-primario
+  background-color: #fff
+  border-radius: 5px
+
+.buttom.color-primario:hover, .buttom.color-primario:focus, .tabla-a.color-primario thead
+  background-color: #ADDBD5
+  p
+    background-color: #fff
